added hero section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
       <div class="nav-logo">Logo</div>
       <ul class="nav-menu">
-        <li><a href="#"></a>Home</li>
+        <li><a href="#hero"></a>Home</li>
         <li><a href="#"></a>Episodes</li>
         <li><a href="#"></a>Characters</li>
         <li><a href="#"></a>About</li>
@@ -27,5 +27,20 @@
         <span class="fas fa-user"></span>
       </div>
     </nav>
+
+    <section class="hero" id="hero">
+      <div class="hero-content">
+        <h1 class="hero-title">FRIENDS</h1>
+        <p class="hero-description">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
+          asperiores, amet recusandae quis aliquid facere. Esse rem vero
+          eligendi cum ex ullam corrupti enim porro rerum, voluptates sit
+          suscipit ducimus perferendis neque labore veritatis provident velit
+          cumque quos. Fugit ad nemo provident consectetur sed non sit, tenetur,
+          voluptatibus laudantium amet esse quia earum. Esse, voluptas. Totam
+          debitis quos ratione delectus?
+        </p>
+      </div>
+    </section>
   </body>
 </html>
