added episodes section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- Navbar Section -->
     <nav class="navbar">
       <div class="nav-logo">Logo</div>
       <ul class="nav-menu">
@@ -27,7 +28,7 @@
         <span class="fas fa-user"></span>
       </div>
     </nav>
-
+    <!-- Section for Main -->
     <section class="hero" id="hero">
       <div class="hero-content">
         <h1 class="hero-title">FRIENDS</h1>
@@ -40,6 +41,51 @@
           voluptatibus laudantium amet esse quia earum. Esse, voluptas. Totam
           debitis quos ratione delectus?
         </p>
+      </div>
+    </section>
+    <!-- Section for episodes -->
+    <section class="episodes" id="episodes">
+      <div class="container">
+        <h2 class="section-title">Favorite Episodes</h2>
+        <div class="episode-cards">
+          <div class="episode-card">
+            <img src="images/s3e2.jpeg" alt="Episode 1" />
+            <div class="episode-info">
+              <h3>The One Where No One's Ready</h3>
+              <p>Season 3, Episode 2</p>
+            </div>
+          </div>
+
+          <div class="episode-card">
+            <img src="images/s4e12.jpeg" alt="Episode 2" />
+            <div class="episode-info">
+              <h3>The One with the Embryos</h3>
+              <p>Season 4, Episode 12</p>
+            </div>
+          </div>
+          <div class="episode-card">
+            <img src="images/s5e8.jpeg" alt="Episode 5" />
+            <div class="episode-info">
+              <h3>The One with All the Thanksgivings</h3>
+              <p>Season 5, Episode 8</p>
+            </div>
+          </div>
+
+          <div class="episode-card">
+            <img src="images/s5e11.jpeg" alt="Episode 3" />
+            <div class="episode-info">
+              <h3>The One with All the Resolutions</h3>
+              <p>Season 5, Episode 11</p>
+            </div>
+          </div>
+          <div class="episode-card">
+            <img src="images/s5e16.jpeg" alt="Episode 4" />
+            <div class="episode-info">
+              <h3>The One with the Cop</h3>
+              <p>Season 5, Episode 16</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
