added characters section

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <nav class="navbar">
       <div class="nav-logo">Logo</div>
       <ul class="nav-menu">
-        <li><a href="#hero"></a>Home</li>
-        <li><a href="#"></a>Episodes</li>
-        <li><a href="#"></a>Characters</li>
-        <li><a href="#"></a>About</li>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#episodes">Episodes</a></li>
+        <li><a href="#characters">Characters</a></li>
+        <li><a href="#footer">About</a></li>
       </ul>
       <div class="profile-icon">
-        <span class="fas fa-user"></span>
+        <i class="fas fa-user"></i>
       </div>
     </nav>
     <!-- Section for Main -->
@@ -33,13 +33,18 @@
       <div class="hero-content">
         <h1 class="hero-title">FRIENDS</h1>
         <p class="hero-description">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
-          asperiores, amet recusandae quis aliquid facere. Esse rem vero
-          eligendi cum ex ullam corrupti enim porro rerum, voluptates sit
-          suscipit ducimus perferendis neque labore veritatis provident velit
-          cumque quos. Fugit ad nemo provident consectetur sed non sit, tenetur,
-          voluptatibus laudantium amet esse quia earum. Esse, voluptas. Totam
-          debitis quos ratione delectus?
+          1994’te yayın hayatına başlayan ve 10 sezon boyunca milyonları ekran
+          başına kilitleyen Friends, yalnızca bir dizi değil, nesiller boyu
+          süren bir fenomen haline geldi. New York’ta yaşayan altı yakın
+          arkadaşın hayatlarını, aşklarını, işlerini ve en önemlisi
+          dostluklarını konu alan dizi, sıcak hikayesi ve unutulmaz
+          karakterleriyle televizyon tarihinin en sevilen yapımlarından biri
+          oldu. Rachel, Ross, Monica, Chandler, Joey ve Phoebe’nin Central
+          Perk’te başlayan maceraları, izleyicilere hem kahkahalar hem de
+          duygusal anlar sundu. Friends, yalnızca eğlenceli diyaloglarıyla
+          değil, aynı zamanda dostluğun, aile bağlarının ve hayatın getirdiği
+          değişimlerin sıcak bir yansıması olmasıyla da izleyicilerde derin
+          izler bıraktı.
         </p>
       </div>
     </section>
@@ -83,6 +88,50 @@
             <div class="episode-info">
               <h3>The One with the Cop</h3>
               <p>Season 5, Episode 16</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="section-divider"></div>
+    <!-- Section for characters -->
+    <section class="characters" id="characters">
+      <div class="container">
+        <h2 class="section-title">Main Characters</h2>
+        <div class="character-cards">
+          <div class="character-card">
+            <img src="images/monica.jpeg" alt="Monica Geller" />
+            <div class="character-info">
+              <h3>Monica Geller</h3>
+              <p>Courteney Cox</p>
+              <div class="character-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
+                obcaecati.
+              </div>
+            </div>
+          </div>
+
+          <div class="character-card">
+            <img src="images/chandler.jpeg" alt="Chandler Bing" />
+            <div class="character-info">
+              <h3>Chandler Bing</h3>
+              <p>Matthew Perry</p>
+              <div class="character-description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis
+                quae laborum cumque pariatur ratione quos!
+              </div>
+            </div>
+          </div>
+
+          <div class="character-card">
+            <img src="images/joey.jpeg" alt="Joey Tribbiani" />
+            <div class="character-info">
+              <h3>Joey Tribbiani</h3>
+              <p>Matt LeBlanc</p>
+              <div class="character-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Laborum, beatae possimus! Dicta quidem hic consequuntur.
+              </div>
             </div>
           </div>
         </div>
