--- a/index.html
+++ b/index.html
@@ -105,8 +105,14 @@
               <h3>Monica Geller</h3>
               <p>Courteney Cox</p>
               <div class="character-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
-                obcaecati.
+                Monica Geller, Friends’in en düzenli, rekabetçi ve sevgi dolu
+                karakterlerinden biri olarak hafızalara kazındı. Yemek yapmaya
+                olan tutkusu, detaycılığı ve mükemmeliyetçiliğiyle tanınan
+                Monica, aynı zamanda arkadaş grubunun adeta merkeziydi. Güçlü
+                kişiliğiyle kendi yolunu çizdi ve sonunda hayalini kurduğu
+                kariyere ulaştı. Onun en güzel hikâyelerinden biri de, en yakın
+                arkadaşı Chandler ile beklenmedik ama harika bir aşka yelken
+                açmasıydı.
               </div>
             </div>
           </div>
@@ -117,8 +123,13 @@
               <h3>Chandler Bing</h3>
               <p>Matthew Perry</p>
               <div class="character-description">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis
-                quae laborum cumque pariatur ratione quos!
+                Friends dizisinin unutulmaz karakterlerinden biri olan Chandler
+                Bing, keskin zekâsı, kendine has mizah anlayışı ve tuhaf dans
+                hareketleriyle milyonların sevgisini kazandı. Sarkastik
+                esprileriyle her durumu daha eğlenceli hale getiren Chandler,
+                aynı zamanda derin bir duygusallığa sahipti. Joey ile olan
+                dostluğu, Monica ile yaşadığı aşk ve evliliği, onun gelişen ve
+                olgunlaşan karakterini gözler önüne serdi.
               </div>
             </div>
           </div>
@@ -129,13 +140,53 @@
               <h3>Joey Tribbiani</h3>
               <p>Matt LeBlanc</p>
               <div class="character-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Laborum, beatae possimus! Dicta quidem hic consequuntur.
+                Joey Tribbiani, Friends’in en komik, en saf ve en sevgi dolu
+                karakterlerinden biri olarak hafızalara kazındı. İtalyan kökenli
+                bir aktör olan Joey, kariyerinde büyük başarılara ulaşma hayali
+                kurarken, arkadaşlarıyla geçirdiği zaman ve onların desteği onun
+                için her şeyden önemliydi. Joey, büyük kalbiyle sevildi;
+                dostlarına duyduğu bağlılık, özellikle Chandler ile olan kardeş
+                gibi ilişkisi, dizinin en özel dostluk hikâyelerinden birini
+                oluşturdu.
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- Footer Section -->
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer-content">
+          <p class="footer-text">
+            Designed & Developed by
+            <span class="designer-name">Ufuk Can Kumcu</span>
+          </p>
+          <div class="social-links">
+            <a
+              href="https://github.com/ufkcnkmc"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://x.com/ufkcnkmc"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a
+              href="https://portfolio-1-3fe0.onrender.com/"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fas fa-globe"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
