Various adjustments and fixes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-      <div class="nav-logo">FRIENDS</div>
-      <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+      <div class="nav-logo">FRİENDS</div>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -28,18 +28,10 @@
         <label for="nav-toggle" class="nav-close">
           <i class="fas fa-times"></i>
         </label>
-        <li>
-          <label for="nav-toggle"><a href="#hero">Home</a></label>
-        </li>
-        <li>
-          <label for="nav-toggle"><a href="#episodes">Episodes</a></label>
-        </li>
-        <li>
-          <label for="nav-toggle"><a href="#characters">Characters</a></label>
-        </li>
-        <li>
-          <label for="nav-toggle"><a href="#footer">About</a></label>
-        </li>
+        <li><label for="nav-toggle"><a href="#hero">Home</a></label></li>
+        <li><label for="nav-toggle"><a href="#episodes">Episodes</a></label></li>
+        <li><label for="nav-toggle"><a href="#characters">Characters</a></label></li>
+        <li><label for="nav-toggle"><a href="#footer">About</a></label></li>
       </ul>
       <div class="profile-icon">
         <i class="fas fa-user"></i>
@@ -49,9 +41,7 @@
     <section class="hero" id="hero">
       <div class="hero-content">
         <h1 class="hero-title">
-          <a href="https://www.imdb.com/title/tt0108778/" target="_blank"
-            >FRIENDS</a
-          >
+          <a href="https://www.imdb.com/title/tt0108778/" target="_blank">FRIENDS</a>
         </h1>
         <p class="hero-description">
           1994'te yayın hayatına başlayan ve 10 sezon boyunca milyonları ekran
@@ -76,158 +66,90 @@
         <div class="episode-cards">
           <div class="episode-card">
             <div class="video-container">
-              <input type="checkbox" id="video-toggle-1" class="video-toggle" />
+              <input type="checkbox" id="video-toggle-1" class="video-toggle">
               <img src="images/s3e2.jpeg" alt="Episode 1" />
               <label class="play-button" for="video-toggle-1">
                 <i class="fas fa-play"></i>
               </label>
-              <video
-                class="episode-video"
-                src="videos/s3e2v.mp4"
-                controls
-              ></video>
+              <video class="episode-video" src="videos/s3e2v.mp4" controls></video>
             </div>
             <div class="episode-info">
               <h3>The One Where No One's Ready</h3>
               <p>Season 3, Episode 2</p>
               <div class="episode-description">
-                Bu bölümde Ross, önemli bir etkinliğe katılmak için
-                arkadaşlarını acele ettirmeye çalışırken herkesin kendi küçük
-                krizleriyle uğraşması komik ve kaotik anlara yol açar. Joey ve
-                Chandler, bir koltuk yüzünden çocukça bir rekabete girerken,
-                Monica eski sevgilisi Richard'tan gelen bir mesajı takıntı
-                haline getirir. Rachel, ne giyeceğine karar veremediği için
-                Ross'la tartışırken, Phoebe ise herkesin telaşına rağmen en
-                sakin kalan kişi olmaya çalışır. Tüm olaylar, grubun planlanan
-                saate yetişip yetişemeyeceği sorusunu beraberinde getirir.
-                Eğlenceli diyaloglar ve unutulmaz sahneleriyle bu bölüm,
-                Friends'in en sevilen bölümlerinden biri olmaya aday!
+                Bu bölümde Ross, önemli bir etkinliğe katılmak için arkadaşlarını acele ettirmeye çalışırken herkesin kendi küçük krizleriyle uğraşması komik ve kaotik anlara yol açar. Joey ve Chandler, bir koltuk yüzünden çocukça bir rekabete girerken, Monica eski sevgilisi Richard'tan gelen bir mesajı takıntı haline getirir. Rachel, ne giyeceğine karar veremediği için Ross'la tartışırken, Phoebe ise herkesin telaşına rağmen en sakin kalan kişi olmaya çalışır. Tüm olaylar, grubun planlanan saate yetişip yetişemeyeceği sorusunu beraberinde getirir. Eğlenceli diyaloglar ve unutulmaz sahneleriyle bu bölüm, Friends'in en sevilen bölümlerinden biri olmaya aday!
               </div>
             </div>
           </div>
 
           <div class="episode-card">
             <div class="video-container">
-              <input type="checkbox" id="video-toggle-3" class="video-toggle" />
+              <input type="checkbox" id="video-toggle-3" class="video-toggle">
               <img src="images/s4e12.jpeg" alt="Episode 2" />
               <label class="play-button" for="video-toggle-3">
                 <i class="fas fa-play"></i>
               </label>
-              <video
-                class="episode-video"
-                src="videos/s4e12v.mp4"
-                controls
-              ></video>
+              <video class="episode-video" src="videos/s4e12v.mp4" controls></video>
             </div>
             <div class="episode-info">
               <h3>The One with the Embryos</h3>
               <p>Season 4, Episode 12</p>
               <div class="episode-description">
-                Bu ikonik bölümde, Monica ve Rachel ile Joey ve Chandler
-                arasında unutulmaz bir bilgi yarışması gerçekleşir. Ross'un
-                hazırladığı sorularla başlayan oyun, giderek daha rekabetçi hale
-                gelir ve büyük bir bahis ortaya konur: Eğer Joey ve Chandler
-                kazanırsa, kızlar dairelerini onlara verecektir; eğer Monica ve
-                Rachel kazanırsa, erkekler evcil kuşlarını bırakacaktır. Öte
-                yandan, Phoebe taşıyıcı anne olabilmek için tıbbi bir sürece
-                girer ve heyecanla sonucu bekler. Hem eğlenceli hem de duygusal
-                anlarla dolu olan bu bölüm, Friends hayranlarının favorileri
-                arasında yer alıyor!
+                Bu ikonik bölümde, Monica ve Rachel ile Joey ve Chandler arasında unutulmaz bir bilgi yarışması gerçekleşir. Ross'un hazırladığı sorularla başlayan oyun, giderek daha rekabetçi hale gelir ve büyük bir bahis ortaya konur: Eğer Joey ve Chandler kazanırsa, kızlar dairelerini onlara verecektir; eğer Monica ve Rachel kazanırsa, erkekler evcil kuşlarını bırakacaktır. Öte yandan, Phoebe taşıyıcı anne olabilmek için tıbbi bir sürece girer ve heyecanla sonucu bekler. Hem eğlenceli hem de duygusal anlarla dolu olan bu bölüm, Friends hayranlarının favorileri arasında yer alıyor!
               </div>
             </div>
           </div>
 
           <div class="episode-card">
             <div class="video-container">
-              <input type="checkbox" id="video-toggle-2" class="video-toggle" />
+              <input type="checkbox" id="video-toggle-2" class="video-toggle">
               <img src="images/s5e8.jpeg" alt="Episode 5" />
               <label class="play-button" for="video-toggle-2">
                 <i class="fas fa-play"></i>
               </label>
-              <video
-                class="episode-video"
-                src="videos/s5e8v.mp4"
-                controls
-              ></video>
+              <video class="episode-video" src="videos/s5e8v.mp4" controls></video>
             </div>
             <div class="episode-info">
               <h3>The One with All the Thanksgivings</h3>
               <p>Season 5, Episode 8</p>
               <div class="episode-description">
-                Bu eğlenceli Şükran Günü bölümünde, arkadaşlar geçmişte
-                yaşadıkları en kötü Şükran Günü anılarını paylaşırken
-                birbirinden komik geri dönüş sahneleri izleyicilere nostaljik
-                anlar yaşatıyor. Monica'nın Chandler'a lise yıllarında yaptığı
-                talihsiz bir olay, Ross'un eski evliliği ve Joey'nin kafasına
-                hindiyi geçirdiği unutulmaz sahneler bölümün en komik anları
-                arasında yer alıyor. Aynı zamanda Monica ve Chandler arasındaki
-                romantik gelişmeler de bu bölümde özel bir yer tutuyor. Hem
-                kahkaha hem de duygusal anlar barındıran bu bölüm, Friends'in en
-                sevilen Şükran Günü bölümlerinden biri!
+                Bu eğlenceli Şükran Günü bölümünde, arkadaşlar geçmişte yaşadıkları en kötü Şükran Günü anılarını paylaşırken birbirinden komik geri dönüş sahneleri izleyicilere nostaljik anlar yaşatıyor. Monica'nın Chandler'a lise yıllarında yaptığı talihsiz bir olay, Ross'un eski evliliği ve Joey'nin kafasına hindiyi geçirdiği unutulmaz sahneler bölümün en komik anları arasında yer alıyor. Aynı zamanda Monica ve Chandler arasındaki romantik gelişmeler de bu bölümde özel bir yer tutuyor. Hem kahkaha hem de duygusal anlar barındıran bu bölüm, Friends'in en sevilen Şükran Günü bölümlerinden biri!
               </div>
             </div>
           </div>
 
           <div class="episode-card">
             <div class="video-container">
-              <input type="checkbox" id="video-toggle-4" class="video-toggle" />
+              <input type="checkbox" id="video-toggle-4" class="video-toggle">
               <img src="images/s5e11.jpeg" alt="Episode 3" />
               <label class="play-button" for="video-toggle-4">
                 <i class="fas fa-play"></i>
               </label>
-              <video
-                class="episode-video"
-                src="videos/s5e11v.mp4"
-                controls
-              ></video>
+              <video class="episode-video" src="videos/s5e11v.mp4" controls></video>
             </div>
             <div class="episode-info">
               <h3>The One with All the Resolutions</h3>
               <p>Season 5, Episode 11</p>
               <div class="episode-description">
-                Yeni yıl yaklaşırken, herkes kendine yeni kararlar alır ve
-                bunlara bağlı kalmaya çalışır. Ross, bir hafta boyunca hiçbir
-                şeye kötü yorum yapmamaya söz verir ancak bu karar, onun için
-                oldukça zorlayıcı olur—özellikle de derinin içine yapışan yeni
-                deri pantolonuyla yaşadığı komik olay sonrası! Rachel,
-                Chandler'ın Monica ve Chandler'ın ilişkisini gizli tutmaya
-                çalışmasını zorlaştırırken, Joey kendine daha fazla kitap
-                okumaya söz verir ama Monica'nın fotoğraf çekme takıntısı onu
-                zor durumda bırakır. Eğlenceli ve unutulmaz anlarla dolu bu
-                bölüm, Friends'in en komik yılbaşı bölümlerinden biri!
+                Yeni yıl yaklaşırken, herkes kendine yeni kararlar alır ve bunlara bağlı kalmaya çalışır. Ross, bir hafta boyunca hiçbir şeye kötü yorum yapmamaya söz verir ancak bu karar, onun için oldukça zorlayıcı olur—özellikle de derinin içine yapışan yeni deri pantolonuyla yaşadığı komik olay sonrası! Rachel, Chandler'ın Monica ve Chandler'ın ilişkisini gizli tutmaya çalışmasını zorlaştırırken, Joey kendine daha fazla kitap okumaya söz verir ama Monica'nın fotoğraf çekme takıntısı onu zor durumda bırakır. Eğlenceli ve unutulmaz anlarla dolu bu bölüm, Friends'in en komik yılbaşı bölümlerinden biri!
               </div>
             </div>
           </div>
 
           <div class="episode-card">
             <div class="video-container">
-              <input type="checkbox" id="video-toggle-5" class="video-toggle" />
+              <input type="checkbox" id="video-toggle-5" class="video-toggle">
               <img src="images/s5e16.jpeg" alt="Episode 4" />
               <label class="play-button" for="video-toggle-5">
                 <i class="fas fa-play"></i>
               </label>
-              <video
-                class="episode-video"
-                src="videos/s5e16v.mp4"
-                controls
-              ></video>
+              <video class="episode-video" src="videos/s5e16v.mp4" controls></video>
             </div>
             <div class="episode-info">
               <h3>The One with the Cop</h3>
               <p>Season 5, Episode 16</p>
               <div class="episode-description">
-                Bu bölümde, Ross yeni bir kanepe almaya karar verir ve onu
-                apartmanına taşımaya çalışırken Joey ve Rachel'dan yardım alır.
-                Ancak dar merdivenlerde kaneçeyi döndürmeye çalışırken yaşadığı
-                zorluklar ve ünlü "Pivot!" sahnesi, Friends'in en unutulmaz
-                anlarından biri haline gelir. Öte yandan, Joey, Monica ve
-                Chandler'ın ilişkisini öğrenen tek kişinin Ross olduğunu
-                düşünerek Rachel'a aşkını itiraf eder. Bu durum, ikili arasında
-                beklenmedik bir şekilde gelişen bir diyaloga yol açar. Phoebe
-                ise yolda bulduğu bir polis rozetiyle şaka yapmaya başlar ancak
-                gerçek bir polisle tanışınca işler farklı bir yöne gider. Hem
-                kahkaha hem de sürprizlerle dolu bu bölüm, Friends'in en
-                eğlenceli anlarından bazılarını sunuyor!
+                Bu bölümde, Ross yeni bir kanepe almaya karar verir ve onu apartmanına taşımaya çalışırken Joey ve Rachel'dan yardım alır. Ancak dar merdivenlerde kaneçeyi döndürmeye çalışırken yaşadığı zorluklar ve ünlü "Pivot!" sahnesi, Friends'in en unutulmaz anlarından biri haline gelir. Öte yandan, Joey, Monica ve Chandler'ın ilişkisini öğrenen tek kişinin Ross olduğunu düşünerek Rachel'a aşkını itiraf eder. Bu durum, ikili arasında beklenmedik bir şekilde gelişen bir diyaloga yol açar. Phoebe ise yolda bulduğu bir polis rozetiyle şaka yapmaya başlar ancak gerçek bir polisle tanışınca işler farklı bir yöne gider. Hem kahkaha hem de sürprizlerle dolu bu bölüm, Friends'in en eğlenceli anlarından bazılarını sunuyor!
               </div>
             </div>
           </div>
@@ -261,7 +183,7 @@
           <div class="character-card">
             <img src="images/chandler.jpeg" alt="Chandler Bing" />
             <div class="character-info">
-              <h3>Chandler Bing <i class="fas fa-ribbon" style="color: #4a050528; font-size: 0.8em; text-shadow: 1px 1px 2px rgba(41, 41, 41, 0.5);"></i></h3>
+              <h3>Chandler Bing <i class="fas fa-ribbon" style="color: #000; font-size: 0.8em; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);"></i></h3>
               <p>Matthew Perry</p>
               <div class="character-description">
                 Friends dizisinin unutulmaz karakterlerinden biri olan Chandler
