Added app.js with task management functionality

--- a/project-2/index.html
+++ b/project-2/index.html
@@ -36,15 +36,15 @@
             <label for="priority">Öncelik</label>
             <div class="priority-options">
               <label class="priority-label">
-                <input type="radio" name="priority" value="low" />
+                <input type="radio" name="priority" value="Düşük" />
                 Düşük
               </label>
               <label class="priority-label">
-                <input type="radio" name="priority" value="medium" />
+                <input type="radio" name="priority" value="Orta" />
                 Orta
               </label>
               <label class="priority-label">
-                <input type="radio" name="priority" value="high" />
+                <input type="radio" name="priority" value="Yüksek" />
                 Yüksek
               </label>
             </div>
@@ -67,5 +67,6 @@
         <div class="taskList" id="taskList"></div>
       </main>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
